--- a/css/style.css
+++ b/css/style.css
@@ -10,10 +10,10 @@
   --hue-color: 340;
 
   /* hsl(var(--hue-color), 69%, 58%)*/
-  --first-color: #484b57;
+  --first-color: #88c1f0;
   --first-color--second: #ffffff;
-  --first-color-alt: #ff6f61;
-  --first-color-lighter: #f3b7c1;
+  --first-color-alt: #9ae2e7;
+  --first-color-lighter: #908aa0;
 
   --transparent-card-color: #fff;
   --card-color: #fcd2d8;
@@ -26,13 +26,8 @@
   --container-color: #fff;
   --scroll-bar-color: hsl(var(--hue-color), 15%, 85%);
   --scroll-thumb-color: hsl(var(--hue-color), 15%, 70%);
-  --gradient-color: linear-gradient(
-    266deg,
-    rgba(245, 155, 213, 0.9604366987179487) 14%,
-    rgba(219, 178, 209, 1) 35%,
-    rgba(194, 180, 226, 1) 58%,
-    rgba(232, 181, 206, 1) 100%
-  );
+  --black-color: black;
+  --grey-color: grey;
 
   /* ====== FONT AND TYPOGRAPHY ====== */
   --gullible-font: "Maven Pro", sans-serif;
@@ -89,15 +84,16 @@
 
 /* =============== VARIABLE DARK THEME COLOR ============== */
 body.dark-theme {
-  --first-color: hsl(var(--hue-color), 69%, 58%);
+  --first-color: #3e3685;
   --first-color--second: hsl(var(--hue-color), 96%, 91%);
-  --first-color-alt: #ff6f61; /* Not changed */
-  --first-color-lighter: #f3b7c1; /* Not changed */
+  --first-color-alt: #6463c0; 
+  --first-color-lighter: #908aa0; /* Not changed */
   --card-color: hsl(var(--hue-color), 50%, 67%);
   --transparent-card-color: hsl(var(--hue-color), 30%, 14%);
 
   --title-color: hsl(var(--hue-color), 10%, 95%);
   --text-color: hsl(var(--hue-color), 10%, 75%);
+  --text-black-color: black;
   --mainText: hsl(var(--hue-color), 10%, 75%);
   --text-color-light: hsl(var(--hue-color), 10%, 65%);
   --input-color: hsl(var(--hue-color), 29%, 16%);
@@ -178,6 +174,7 @@ img {
 }
 
 .section__title {
+  margin: 2rem;
   font-size: var(--big-font-size);
   font-family: var(--gullible-font);
 }
@@ -370,7 +367,7 @@ img {
 
   /* Background img */
 
-  background: url(../img/homepage.jpg) no-repeat center center fixed;
+  background: url(../img/homepage/homepage.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -463,7 +460,7 @@ img {
   font-weight: var(--font-medium);
   margin-bottom: var(--mb-1);
   padding: 1rem 1.5rem 1.5rem;
-  margin-top: 5rem;
+  margin-top: 10rem;
 }
 
 /*
@@ -1286,15 +1283,15 @@ ul li:nth-child(5) a:before {
 .footer__copy {
   font-size: var(--smaller-font-size);
   text-align: center;
-  color: var(--text-color);
-  margin-top: var(--mb-3);
+  color: var(--text-block-color);
+  margin-top: var(--mb-2);
 }
 
 .footer__title,
 .footer__subtitle,
 .footer__link,
 .footer__social {
-  color: var(--first-color-alt);
+  color: var(--black-color);
 }
 
 /* ===================== SCROLL UP ================== */
@@ -1551,7 +1548,7 @@ ul li:nth-child(5) a:before {
   }
 
   .footer__copy {
-    margin-top: 4.5rem;
+    margin-top: 4rem;
   }
 
   .footer__copy a {
@@ -1590,7 +1587,9 @@ ul li:nth-child(5) a:before {
   }
 
   .contact__container {
-    padding-left: var(--mb-3);
+    padding-left: var(
+
+    );
     padding-top: var(--mb-3);
     row-gap: 4rem;
   }
